# pocl

./: .gitignore  Makefile.am  autogen.sh  configure.ac
config/: xclang
lib/kernel/: Makefile.target.am  clang.mk  sources.mk
lib/kernel/powerpc64/: Makefile.am
lib/llvmopencl/: Makefile.am  configure.ac
scripts/: Makefile.am  pocl-build.in  pocl-kernel.in  pocl-standalone.in  pocl-workgroup.in
